# rwbookclub.com

./: .eleventy.js  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  LICENSE  MIGRATION-STATUS.md  README.md  books.json  feed.xml  index.html  llms.txt  meetings.ics  next.json  oliver-test-log.md  package-lock.json  package.json  pyproject.toml  requirements.txt  robots.txt  ruff.toml  sitemap.xml
.github/: dependabot.yml
AGENT-TEAM/: README.md  WORKFLOW.md  build-manager.md  club-ethnographer.md  evaluator.md  manager.md  operations-manager.md  product-manager.md
about/: index.html
agent/: README.md  ROADMAP.md  SOUL.md  __init__.py  access.py  backup.py  bot.py  clock.py  clubdb.py  commands.py  config.py  constraints.txt  context.py  corpus_gen.py  corpus_read.py  corpus_write.py  database.py  db.py  delivery.py  email_jmap.py  email_policy.py  email_tracking.py  gitwrite.py  health.py  identities.py  jobs.py  mail_archive.py  meeting_campaign.py  meeting_rules.py  member_preferences.py  model_readers.py  oliver.py  openlibrary.py  outbox.py  persona.py  proactive.py  publish.py  publishing.py  reflection.py  requirements.txt  (+5 more)
authors/: index.html
books/: a-canticle-for-leibowitz.txt  a-crack-in-creation.txt  a-distant-mirror.txt  a-history-of-god.txt  a-man-at-arms.txt  a-supposedly-fun-thing-i-ll-never-do-again.txt  a-world-appears.txt  across-realtime.txt  addiction-by-design.txt  aeschylus-i.txt  all-art-is-propaganda.txt  american-nations.txt  amusing-ourselves-to-death.txt  ancillary-justice.txt  animal-vegetable-miracle.txt  ant-encounters.txt  antifragile.txt  army-of-none.txt  beautiful-code.txt  beautiful-evidence.txt  behind-the-beautiful-forevers.txt  being-mortal.txt  bending-adversity.txt  benjamin-franklin.txt  beyond-oil.txt  blindsight.txt  bowling-alone.txt  caste.txt  cheating.txt  co-intelligence.txt  collapse.txt  complexity.txt  count-zero.txt  craeft.txt  creating-a-world-without-poverty.txt  creativity.txt  daemon.txt  darwin-s-radio.txt  dawn-of-everything.txt  democratizing-innovation.txt  (+141 more)
corpus/: README.md  __init__.py  airtable.py  fetch.py  images.py  migrate.py  normalize.py  openlibrary_subjects.py  paths.py  requirements.txt  restore_author_bios.py  schema.py  validate.py  wikipedia_author_bios.py
docs/: ERD.md  RESTORE.md
src/: 404.njk  (+8 more)
(+1284 files in other folders)
