[project]
name = "rwbookclub"
version = "0.0.0"
description = "R/W Book Club website, private corpus, and Oliver agent"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiohttp>=3.12",
    "anthropic>=0.117.0",
    "discord.py>=2.7.1",
    "jinja2>=3.1",
    "markdown>=3.10.2",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "mypy==2.3.0",
    "pip-audit==2.10.1",
    "pre-commit>=4.5.0",
    "pytest>=9.1.1,<10",
    "pytest-cov==7.1.0",
    "ruff==0.15.22",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# Only collect the unit suite under tests/. Note tests/eval.py is the LLM-driven
# evaluation harness — it makes REAL Anthropic API calls and must never run as a
# unit test. It is excluded here two ways: it lives behind `if __name__ ==
# "__main__"`, and `python_files` below only matches `test_*.py`, not `eval.py`.
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.14"
# Start with the typed infrastructure seams where static contracts pay off most. Expand this
# list as adjacent modules are annotated; do not silence the rest of the repository wholesale.
files = [
    "agent/config.py",
    "agent/security.py",
    "agent/database.py",
    "agent/identities.py",
    "agent/member_preferences.py",
    "agent/publishing.py",
    "agent/repositories",
    "agent/enrich/validation.py",
    "agent/tools.py",
    "agent/tool_catalog",
    "agent/tool_handlers/context.py",
    "corpus/paths.py",
]
follow_imports = "skip"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.run]
source = ["agent", "corpus"]
# Retired, one-time migration/mining scripts are preserved for history and restore work, but are
# not part of the live runtime coverage budget.
omit = ["agent/script/archive/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
